examples/negative/silent_contract/mutable_param_write_pure_row.kai
# Silent contract (#511 audit) — issue #251/#252 observable-effects
# discipline rule 1: `array_set` on a parameter Array is an
# observable mutation and must require `Mutable` in the row.
# `writer : Unit` (pure row) writing through param `xs` is silently
# accepted today.

fn writer(xs: Array[Int]) : Unit = {
  let _ = Mutable.array_set(xs, 0, 99)
  ()
}

fn main() : Int / Mutable {
  let xs = Mutable.array_make(1, 0)
  writer(xs)
  Mutable.array_get(xs, 0)
}
